--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-sass": "~0.7.3",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-jade": "~0.11.0"
+    "grunt-contrib-jade": "~0.11.0",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
