--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "audri.us",
   "description": "audri.us website",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "author": "Audrius Lubys",
   "scripts": {
-    "buildjade": "jade jade --out ./dist --obj ./data.json --pretty",
-    "buildcss": "node-sass --output-style compact ./scss/main.scss dist/css/style.min.css",
+    "buildjade": "jade --pretty --obj data.json --out dist --no-debug jade/index.jade",
+    "prebuildcss": "mkdir -p dist/css",
+    "buildcss": "node-sass --output-style compact scss/main.scss dist/css/style.min.css",
     "copyfiles": "cp -r fonts dist && cp -r img dist",
     "build": "npm run buildjade && npm run buildcss && npm run copyfiles"
   },
   "devDependencies": {
-    "jade-cli": "^0.1.1",
-    "node-sass": "^3.3.3"
+    "jade": "^1.11.0",
+    "node-sass": "^3.4.2"
   }
 }
