--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "private": true,
   "author": "Audrius Lubys",
   "scripts": {
-    "buildjade": "jade --pretty --obj data.json --out dist --no-debug jade/index.jade",
-    "prebuildcss": "mkdir -p dist/css",
-    "buildcss": "node-sass --output-style compressed scss/main.scss dist/css/style.min.css",
-    "copyfiles": "cp -r fonts dist && cp -r img dist",
-    "build": "npm run buildjade && npm run buildcss && npm run copyfiles"
+    "buildmarkup": "pug -D -P -O data.json -o dist app/index.pug",
+    "buildcss": "node-sass --output-style compressed app/scss/main.scss dist/css/style.min.css",
+    "copyfiles": "cp -r app/fonts dist && cp -r app/img dist",
+    "build": "npm run buildmarkup && npm run buildcss && npm run copyfiles"
   },
   "devDependencies": {
-    "jade": "^1.11.0",
-    "node-sass": "^3.4.2"
+    "node-sass": "^3.4.2",
+    "pug-cli": "^1.0.0-alpha6"
   }
 }
