--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "private": true,
   "author": "Audrius Lubys",
   "scripts": {
-    "buildmarkup": "pug -D -P -O env.js -o dist app/index.pug",
-    "buildcss": "node-sass --output-style compressed app/scss/main.scss dist/style.min.css",
-    "copyfiles": "cp -r app/fonts dist && cp -r app/img dist",
-    "build": "yarn buildmarkup && yarn buildcss && yarn copyfiles",
+    "buildmarkup": "pug --obj env.js --out dist src/index.pug",
+    "buildstaticfiles": "ncp src/static dist",
+    "build": "yarn buildmarkup && yarn buildstaticfiles",
     "start": "yarn build && http-server dist -o",
     "watch": "watch 'yarn build' app"
   },
   "devDependencies": {
     "dotenv": "^5.0.1",
     "http-server": "^0.11.1",
+    "jstransformer-sass": "^1.0.0",
+    "ncp": "^2.0.0",
     "node-sass": "^4.8.3",
     "pug-cli": "^1.0.0-alpha6",
     "watch": "^1.0.2"
