--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "audri.us",
   "description": "audri.us website",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "private": true,
   "author": "Audrius Lubys",
+  "type": "module",
   "scripts": {
-    "build": "node ./build src/index.pug src/static dist",
-    "start": "npm run build && http-server dist -o"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "dotenv": "^14.3.0",
-    "http-server": "^14.1.0",
-    "pug": "^3.0.2",
-    "sass": "^1.49.0"
+    "typescript": "~5.8.3",
+    "vite": "^7.1.7"
   }
 }
